@@ -1,3 +1,13 @@
+2007-08-06  Wakaba  <wakaba@suika.fam.cx>
+
+	* ContentChecker.pod: New documentation.
+
+	* Makefile: A rule for |ContentChecker.html| is added.
+
+	* ContentChecker.pm: A pod "LICENSE" section is added.
+
+	* NanoDOM.pm ($VERSION): New variable.
+
 2007-08-05  Wakaba  <wakaba@suika.fam.cx>
 
 	* H2H.pm: |b|, |i|, and |sub| are added to the
